[package]
name = "webservice"
version = "0.1.0"
edition = "2021"
default-run = "teacher-service"

[dependencies]
actix-rt = "2.6.0"
actix-web = "4.0.0"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.134", features = ["derive"] }
sqlx = { version = "0.6.0", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }

[[bin]]
name = "teacher-service"